--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -4,4 +4,8 @@
 
 @import '@skeletonlabs/skeleton'; 
 @import '@skeletonlabs/skeleton-svelte'; 
-@import '@skeletonlabs/skeleton/themes/hamlindigo'; 
+@import '@skeletonlabs/skeleton/themes/hamlindigo';
+
+html, body {
+    height: 100%;
+}
