--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -2,10 +2,11 @@
 @plugin '@tailwindcss/forms';
 @plugin '@tailwindcss/typography';
 
-@import '@skeletonlabs/skeleton'; 
-@import '@skeletonlabs/skeleton-svelte'; 
+@import '@skeletonlabs/skeleton';
+@import '@skeletonlabs/skeleton-svelte';
 @import '@skeletonlabs/skeleton/themes/hamlindigo';
 
-html, body {
-    height: 100%;
+html,
+body {
+	height: 100%;
 }
